--- a/h.html
+++ b/h.html
@@ -169,10 +169,10 @@
                     <i class="uil uil-desktop-alt"></i>
                     <label><h3>Netflix Home Page</h3></label>
                 </div>
-                <div class="project-box"> 
+                <a href="https://github.com/venkatacharan25/Portfolio" class="project-box"> 
                     <i class="uil uil-grid"></i>
                     <label><h3>Portfolio</h3></label>
-                </div>
+                </a>
             </div>
          </section>
 
