--- a/h.html
+++ b/h.html
@@ -165,10 +165,10 @@
                     <i class="uil uil-clock"></i>
                     <label><h3>Theme Clock</h3></label>
                 </a>
-                <div class="project-box"> 
+                <a href="https://github.com/venkatacharan25/Netflix-Home-Page" class="project-box"> 
                     <i class="uil uil-desktop-alt"></i>
                     <label><h3>Netflix Home Page</h3></label>
-                </div>
+                </a>
                 <a href="https://github.com/venkatacharan25/Portfolio" class="project-box"> 
                     <i class="uil uil-grid"></i>
                     <label><h3>Portfolio</h3></label>
